# turbo-linear-mcp

./: .flake8  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_server.bat  run_server.sh
.github/workflows/: ci.yml
config/: .env.example  config.example.yaml  config.yaml
project-plan/: api_capabilities_analysis.md  authentication_security_design.md  client_usage_guide.md  deployment_instructions.md  error_handling_logging.md  feature_list_conversion_design.md  implementation_blueprint.md  implementation_tasks.md  mcp_server_architecture.md  mcp_server_requirements.md  project_summary.md  search_functionality_design.md  server_configuration.md  server_usage_documentation.md
src/: main.py
src/auth/: access.py  api_key.py  audit.py  middleware.py  oauth.py  rate_limit.py  refresh.py  storage.py  validation.py
src/config/: config.py
src/features/: batch.py  formatter.py  parser.py  processor.py  validation.py
src/linear/: client.py  comment.py  issue.py  label.py  project.py  team.py  user.py
src/mcp/: capabilities.py  credentials.py  parser.py  resource.py  serializer.py  server.py  tool.py  validation.py  version.py
src/search/: __init__.py  cache.py  engine.py  filter.py  formatter.py  optimizer.py  query.py  response_optimization.py  result_formatter.py  unified.py  validation.py
src/server/: health.py  server.py  settings.py  validation.py
src/utils/: environment.py  errors.py  logging.py  metrics.py  shutdown.py
tests/: conftest.py
tests/search/: test_advanced_formatter.py  test_cache.py  test_filter.py  test_formatter.py  test_optimizer.py  test_response_optimization.py  test_result_formatter.py  test_unified.py  test_validation.py
tests/unit/: test_api_key.py  test_config.py  test_environment.py  test_errors.py  (+2 more)
